--- a/.gitignore
+++ b/.gitignore
@@ -135,9 +135,8 @@ dmypy.json
 */.DS_Store
 alexautoml/.DS_Store
 .catboost_info
-*.catboost_info/
+**/catboost_info
 catboost_info/*
-*/catboost_info
 *.pkl
 test_de.zip
 .gitignore
