--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "automl-alex"
 version = "2023.3.9"
 description = "State-of-the art Automated Machine Learning python library for Tabular Data"
-authors = ["Alex Lekov <11148364-AlexLekov@users.noreply.gitlab.com>"]
+authors = ["Alex-Lekov <61644712+Alex-Lekov@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "automl_alex"}]
@@ -16,19 +16,14 @@ seaborn = "^0.12.2"
 lightgbm = "^3.3.5"
 catboost = "^1.1.1"
 xgboost = "^1.7.4"
-scipy = "^1.8.1"
 tqdm = "^4.65.0"
 optuna = "^3.1.0"
 category-encoders = "^2.6.0"
-patsy = "^0.5.3"
-statsmodels = "^0.13.5"
-joblib = "^1.2.0"
 optuna-dashboard = "^0.8.1"
 loguru = "^0.6.0"
 psutil = "^5.9.4"
+nbformat = "^5.7.3"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core"]
