--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,59 @@
-numpy>=1.18.5
-pandas>=1.0.1
-scikit-learn>=0.21.0
-seaborn
-lightgbm>=3.0.0
-catboost>=0.24.3
-xgboost>=1.3.0
-tensorflow>=2.2.0
-scipy>=1.4.1
-tqdm>=4.43.0
-optuna>=2.3.0
-category-encoders>=2.2.2
-patsy>=0.5.1
-statsmodels>=0.11.1
-joblib>=1.0.0
-optuna-dashboard>=0.3.1
-loguru
-psutil
+alembic==1.10.2; python_version >= "3.7"
+attrs==22.2.0; python_version >= "3.7"
+bottle==0.12.25; python_version >= "3.7"
+catboost==1.1.1
+category-encoders==2.6.0
+cmaes==0.9.1; python_version >= "3.7"
+colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" and sys_platform == "win32" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.7.0" and sys_platform == "win32"
+colorlog==6.7.0; python_version >= "3.7"
+contourpy==1.0.7; python_version >= "3.8"
+cycler==0.11.0; python_version >= "3.8"
+fastjsonschema==2.16.3; python_version >= "3.7"
+fonttools==4.39.0; python_version >= "3.8"
+graphviz==0.20.1; python_version >= "3.7"
+greenlet==2.0.2; python_version >= "3.7" and python_full_version < "3.0.0" and platform_machine == "aarch64" or python_version >= "3.7" and python_full_version < "3.0.0" and platform_machine == "ppc64le" or python_version >= "3.7" and python_full_version < "3.0.0" and platform_machine == "x86_64" or python_version >= "3.7" and python_full_version < "3.0.0" and platform_machine == "amd64" or python_version >= "3.7" and python_full_version < "3.0.0" and platform_machine == "AMD64" or python_version >= "3.7" and python_full_version < "3.0.0" and platform_machine == "win32" or python_version >= "3.7" and python_full_version < "3.0.0" and platform_machine == "WIN32" or platform_machine == "aarch64" and python_version >= "3.7" and python_full_version >= "3.5.0" or platform_machine == "ppc64le" and python_version >= "3.7" and python_full_version >= "3.5.0" or platform_machine == "x86_64" and python_version >= "3.7" and python_full_version >= "3.5.0" or platform_machine == "amd64" and python_version >= "3.7" and python_full_version >= "3.5.0" or platform_machine == "AMD64" and python_version >= "3.7" and python_full_version >= "3.5.0" or platform_machine == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0" or platform_machine == "WIN32" and python_version >= "3.7" and python_full_version >= "3.5.0"
+importlib-metadata==6.0.0; python_version < "3.9" and python_version >= "3.7"
+importlib-resources==5.12.0; python_version < "3.9" and python_version >= "3.8"
+joblib==1.2.0; python_version >= "3.8"
+jsonschema==4.17.3; python_version >= "3.7"
+jupyter-core==5.2.0; python_version >= "3.8"
+kiwisolver==1.4.4; python_version >= "3.8"
+lightgbm==3.3.5
+loguru==0.6.0; python_version >= "3.5"
+mako==1.2.4; python_version >= "3.7"
+markupsafe==2.1.2; python_version >= "3.7"
+matplotlib==3.7.1; python_version >= "3.8"
+nbformat==5.7.3; python_version >= "3.7"
+numpy==1.24.2; python_version >= "3.8"
+optuna-dashboard==0.8.1; python_version >= "3.7"
+optuna==3.1.0; python_version >= "3.7"
+packaging==23.0; python_version >= "3.8"
+pandas==1.5.3; python_version >= "3.8"
+patsy==0.5.3; python_version >= "3.7"
+pillow==9.4.0; python_version >= "3.8"
+pkgutil-resolve-name==1.3.10; python_version < "3.9" and python_version >= "3.7"
+platformdirs==3.1.0; python_version >= "3.8"
+plotly==5.13.1; python_version >= "3.6"
+psutil==5.9.4; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.8"
+pyrsistent==0.19.3; python_version >= "3.7"
+python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+pytz==2022.7.1; python_version >= "3.8"
+pywin32==305; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.8"
+pyyaml==6.0; python_version >= "3.7"
+scikit-learn==1.2.2; python_version >= "3.8"
+scipy==1.8.1; python_version >= "3.8" and python_version < "3.11" and (python_version > "3.9" or platform_system != "Windows" or platform_machine != "x86") and (python_version == "3.8" and platform_system == "Windows" and platform_machine == "x86" or python_version == "3.9" and platform_system == "Windows" and platform_machine == "x86")
+seaborn==0.12.2; python_version >= "3.7"
+setuptools-scm==7.1.0; python_version >= "3.8"
+six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+sqlalchemy==2.0.5.post1; python_version >= "3.7"
+statsmodels==0.13.5; python_version >= "3.7"
+tenacity==8.2.2; python_version >= "3.6"
+threadpoolctl==3.1.0; python_version >= "3.8"
+tomli==2.0.1; python_version < "3.11" and python_version >= "3.8"
+tqdm==4.65.0; python_version >= "3.7"
+traitlets==5.9.0; python_version >= "3.8"
+typing-extensions==4.5.0; python_version >= "3.8"
+win32-setctime==1.1.0; sys_platform == "win32" and python_version >= "3.5"
+xgboost==1.7.4; python_version >= "3.8"
+zipp==3.15.0; python_version < "3.9" and python_version >= "3.8"
